--- a/extreme-motivation-backend/package.json
+++ b/extreme-motivation-backend/package.json
@@ -11,16 +11,18 @@
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.39.0",
-    "@types/aws-lambda": "^8.10.84",
+    "@types/aws-lambda": "^8.10.85",
     "bcryptjs": "^2.4.3",
-    "dynamodb-onetable": "^2.0.3",
-    "serverless": "^2.64.1",
+    "date-fns": "^2.25.0",
+    "date-fns-tz": "^1.1.6",
+    "dynamodb-onetable": "^2.1.0",
+    "serverless": "^2.65.0",
     "serverless-offline": "^8.2.0",
     "serverless-plugin-typescript": "^2.1.0",
     "typescript": "^4.4.4"
   },
   "devDependencies": {
-    "serverless-dynamodb-local": "0.2.40",
+    "serverless-dynamodb-local": "^0.2.40",
     "serverless-offline": "^8.2.0"
   }
 }
